add second recipe

--- a/cookbook.man
+++ b/cookbook.man
@@ -6,8 +6,7 @@ AUTHOR
 OVERVIEW
 		RECIPE_0 - red lentil curry
 		RECIPE_1 - leek and cheese soup
-		RECIPE_2 - sweet potato curry
-		RECIPE_3 - roasted bell pepper in cream sauce
+
 
 
 RECIPE_0
@@ -22,25 +21,25 @@ RECIPE_0
 
 	INGREDIENTS
 			for two servings:
-				red lentils                 [200g]
-				vegetable stock             [500ml, more as needed]
-				crushed tomatoes            [250ml]
-				fresh tomatoes cubed        [2pcs]
-				pre-cooked chickpeas        [300g]
-				full-fat coconut milk       [400ml]
-				fresh turmeric              [2-3cm long piece]
-				fresh ginger                [2-3cm long piece]
-				fresh garlic                [2-3 cloves]
-				fresh green pepper (hot)    [1 or 2 peppers]
-				red onion                   [1, medium size]
-				cumin powder                [2 tsp]
-				coriander powder            [2 tsp]
-				chili powder                [2 tsp]
-				paprika powder (sweet)      [1 tsp]
-				curry powder                [2 tsp]
-				lemon juice                 [half a lemon]
-				salt
-				pepper
+				Red lentils                 [200g]
+				Vegetable stock             [500ml, more as needed]
+				Crushed tomatoes            [250ml]
+				Fresh tomatoes cubed        [2pcs]
+				Pre-cooked chickpeas        [300g]
+				Full-fat coconut milk       [400ml]
+				Fresh turmeric              [2-3cm long piece]
+				Fresh ginger                [2-3cm long piece]
+				Fresh garlic                [2-3 cloves]
+				Fresh green pepper (hot)    [1 or 2 peppers]
+				Red onion                   [1, medium size]
+				Cumin powder                [2 tsp]
+				Coriander powder            [2 tsp]
+				Chili powder                [2 tsp]
+				Paprika powder (sweet)      [1 tsp]
+				Curry powder                [2 tsp]
+				Lemon juice                 [half a lemon]
+				Salt
+				Pepper
 
 	DIRECTIONS
 			0   Mince or grate onions, garlic, ginger, green peppers and
@@ -69,6 +68,45 @@ RECIPE_0
 	SERVING
 			Serve with freshly cooked basmati rice or toasted/freshly
 			baked pita or naan
+
+
+
+RECIPE_1
+
+	NAME
+			leek and cheese soup
+
+	INGREDIENTS
+			for four servings:
+				Leek                        [2 stalks]
+				Red onion                   [2 medium]
+				Garlic                      [4 cloves]
+				Creme fraiche               [250ml]
+				Vegetable broth             [700ml]
+				Soft cheese                 [150g]
+				Soy minced meat             [200g]
+				Vegetable oil
+				Salt
+				Pepper
+
+	DIRECTIONS
+			0   Wash and cut leek into small (~1cm width) rings. Dice red
+				onion, mince garlic
+
+			1   Into a large pot, pour vegetable oil and fry chopped onion
+				and the soy meat until crispy and brown. Add garlic,
+				careful not to burn it.
+
+			2   Throw sliced leek into the pot and stir. Deglaze with
+				vegetable broth after a minute or two. Let simmer for
+				about ten minutes
+
+			3   Add generous amount of grated soft cheese as well as the
+				creme fraiche. Mix thoroughly. Season to taste with salt
+				and pepper.
+
+	SERVING
+			Serve with fresh baguette.
 
 
 
